# ytldr

./: .gitignore  README.md  prompt.txt  pyproject.toml  youtube_tldr.py
